Fixed project image and navbar responsiveness
Navbar hamburger menu was misaligned after previous navbar link positioning changes and project images were not scaling down with reductions in display width, both fixed now. Also changed graduation image responsiveness so it has a bigger max width to match the project image scale.

--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -33,7 +33,11 @@ p {
 
 .project-image {
   max-width: 400px;
-  margin: 0 auto;
+  width: 100%;
+  border-radius: 10px;
+  border: #3d3b48 solid 3px;
+  object-fit: cover;
+  aspect-ratio: 1/1;
 }
 
 .project-description {
@@ -173,7 +177,8 @@ p {
         border-radius: 10px;
         border: #3d3b48 solid 3px;
         object-fit: cover;
-        width: 50%;
+        max-width: 400px;
+        width: 100%;
         aspect-ratio: 1/1;
       }
     }
